--- a/.github/workflows/antora_build.yml
+++ b/.github/workflows/antora_build.yml
@@ -1,13 +1,14 @@
 name: Build Documentation
 on:
   push:
-    branches: [main]
+#    branches: [main]
   schedule:
     - cron: '0 0 * * 0'
   workflow_dispatch:
 
 jobs:
   Build:
+    if: false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout antora-playbook
@@ -63,8 +64,8 @@ jobs:
 
   Deploy:
     runs-on: ubuntu-latest
-    needs: [Build]
-    if: github.event_name != 'push'
+    #needs: [Build]
+    #if: github.event_name != 'push'
     # run one job instance at a time to prevent conflicts while pushing build result
     concurrency: ci-pages-update
     steps:
@@ -75,16 +76,22 @@ jobs:
           repository: IsyFact/isyfact.github.io
           ref: gh-pages
       - name: Download documentation
+        if: false
         uses: actions/download-artifact@v3
         with:
           name: Documentation
           path: docs
+      - name: Create test file
+        run: |
+          mkdir docs
+          echo test > docs/test.txt
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          branch: gh-pages
+          branch: dev/test
           folder: docs
           force: false
           token: ${{ secrets.ANTORA_TOKEN }}
           repository-name: IsyFact/isyfact.github.io
+          debug: true
 
