--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -4,6 +4,7 @@ site:
   start_page: isyfact-standards-doku:einstieg:einstieg.adoc
 urls:
   latest_version_segment: latest
+  latest_prerelease_version_segment: dev
 content:
   # Comment: Ideal configuration when Antora supports Git LFS (see README for details)
   #sources:
