--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -24,7 +24,10 @@ content:
       branches: HEAD
       start_path: src/docs/antora
     - url: ./isyfact-standards
-      branches: [release/3.x,master]
+      branches: HEAD
+      start_path: isyfact-standards-doc/src/docs/antora
+    - url: ./isyfact-standards-3.x
+      branches: HEAD
       start_path: isyfact-standards-doc/src/docs/antora
     - url: ./isy-web
       branches: HEAD
